libdd-heap-sampler/src/generated/bindings.rs

// Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
// SPDX-License-Identifier: Apache-2.0
// @generated by libdd-heap-sampler/build.rs via bindgen; do not edit by hand.
// Regenerate with: LIBDD_HEAP_SAMPLER_REGEN=1 cargo build -p libdd-heap-sampler

/* automatically generated by rust-bindgen 0.71.1 */

pub const DD_SAMPLING_INTERVAL_DEFAULT: u32 = 524288;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dd_tl_state_t {
    pub sampling_interval: u64,
    pub remaining_bytes: i64,
    pub remaining_bytes_initialized: bool,
    pub initialized: bool,
    pub reentry_guard: bool,
    pub rng: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of dd_tl_state_t"][::std::mem::size_of::<dd_tl_state_t>() - 24usize];
    ["Alignment of dd_tl_state_t"][::std::mem::align_of::<dd_tl_state_t>() - 8usize];
    ["Offset of field: dd_tl_state_t::sampling_interval"]
        [::std::mem::offset_of!(dd_tl_state_t, sampling_interval) - 0usize];
    ["Offset of field: dd_tl_state_t::remaining_bytes"]
        [::std::mem::offset_of!(dd_tl_state_t, remaining_bytes) - 8usize];
    ["Offset of field: dd_tl_state_t::remaining_bytes_initialized"]
        [::std::mem::offset_of!(dd_tl_state_t, remaining_bytes_initialized) - 16usize];
    ["Offset of field: dd_tl_state_t::initialized"]
        [::std::mem::offset_of!(dd_tl_state_t, initialized) - 17usize];
    ["Offset of field: dd_tl_state_t::reentry_guard"]
        [::std::mem::offset_of!(dd_tl_state_t, reentry_guard) - 18usize];
    ["Offset of field: dd_tl_state_t::rng"][::std::mem::offset_of!(dd_tl_state_t, rng) - 20usize];
};
unsafe extern "C" {
    pub fn dd_tl_state_get() -> *mut dd_tl_state_t;
}
unsafe extern "C" {
    #[link_name = "dd_tl_state_get_fast__extern"]
    pub fn dd_tl_state_get_fast() -> *mut dd_tl_state_t;
}
unsafe extern "C" {
    pub fn dd_tl_state_init() -> *mut dd_tl_state_t;
}
unsafe extern "C" {
    pub fn dd_tl_state_get_or_init() -> *mut dd_tl_state_t;
}
unsafe extern "C" {
    #[link_name = "dd_tl_state_get_or_init_fast__extern"]
    pub fn dd_tl_state_get_or_init_fast() -> *mut dd_tl_state_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dd_alloc_req_t {
    pub size: usize,
    pub weight: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of dd_alloc_req_t"][::std::mem::size_of::<dd_alloc_req_t>() - 16usize];
    ["Alignment of dd_alloc_req_t"][::std::mem::align_of::<dd_alloc_req_t>() - 8usize];
    ["Offset of field: dd_alloc_req_t::size"]
        [::std::mem::offset_of!(dd_alloc_req_t, size) - 0usize];
    ["Offset of field: dd_alloc_req_t::weight"]
        [::std::mem::offset_of!(dd_alloc_req_t, weight) - 8usize];
};
unsafe extern "C" {
    pub fn dd_allocation_requested_slow(
        tl: *mut dd_tl_state_t,
        size: usize,
        alignment: usize,
    ) -> dd_alloc_req_t;
}
unsafe extern "C" {
    #[link_name = "dd_allocation_requested__extern"]
    pub fn dd_allocation_requested(size: usize, alignment: usize) -> dd_alloc_req_t;
}
unsafe extern "C" {
    pub fn dd_allocation_created_slow(
        raw: *mut ::std::os::raw::c_void,
        req: dd_alloc_req_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    #[link_name = "dd_allocation_created__extern"]
    pub fn dd_allocation_created(
        raw: *mut ::std::os::raw::c_void,
        req: dd_alloc_req_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn dd_sample_flag_thread_init();
}
unsafe extern "C" {
    pub fn dd_sample_flag_overhead() -> usize;
}
unsafe extern "C" {
    pub fn dd_sample_flag_apply(raw: *mut ::std::os::raw::c_void) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn dd_sample_flag_check(
        user: *mut ::std::os::raw::c_void,
        raw_out: *mut *mut ::std::os::raw::c_void,
    ) -> bool;
}
unsafe extern "C" {
    #[link_name = "dd_sample_flag_check_fast__extern"]
    pub fn dd_sample_flag_check_fast(
        user: *mut ::std::os::raw::c_void,
        raw_out: *mut *mut ::std::os::raw::c_void,
    ) -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dd_alloc_freed_t {
    pub ptr: *mut ::std::os::raw::c_void,
    pub size: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of dd_alloc_freed_t"][::std::mem::size_of::<dd_alloc_freed_t>() - 16usize];
    ["Alignment of dd_alloc_freed_t"][::std::mem::align_of::<dd_alloc_freed_t>() - 8usize];
    ["Offset of field: dd_alloc_freed_t::ptr"]
        [::std::mem::offset_of!(dd_alloc_freed_t, ptr) - 0usize];
    ["Offset of field: dd_alloc_freed_t::size"]
        [::std::mem::offset_of!(dd_alloc_freed_t, size) - 8usize];
};
unsafe extern "C" {
    pub fn dd_allocation_freed_slow(
        ptr: *mut ::std::os::raw::c_void,
        raw: *mut ::std::os::raw::c_void,
        size: usize,
        alignment: usize,
    ) -> dd_alloc_freed_t;
}
unsafe extern "C" {
    #[link_name = "dd_allocation_freed__extern"]
    pub fn dd_allocation_freed(
        ptr: *mut ::std::os::raw::c_void,
        size: usize,
        alignment: usize,
    ) -> dd_alloc_freed_t;
}
unsafe extern "C" {
    pub fn dd_probe_alloc(user: *mut ::std::os::raw::c_void, size: u64, weight: u64);
}
unsafe extern "C" {
    pub fn dd_probe_free(ptr: *mut ::std::os::raw::c_void);
}
